Fix some layout bugs

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -92,6 +92,13 @@ ul.categories
   z-index: 20
   display: block
   
+  &.place
+    max-width: 200px
+    min-height: 250px
+    
+    label
+      clear: left
+  
   button
     background-color: #333
     color: #fff
